installing nextflow on Dockerfile